[package]
name = "my_stackoverflow_api_rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rocket = { version="0.5.0", features=["json"] }
sqlx = { version = "0.9.0", features = [ "runtime-tokio", "tls-rustls", "postgres", "time", "uuid"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
async-trait = "0.1"
thiserror = "2.0.18"
